# edbv

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/view/: app.rs  mod.rs
xtask/: Cargo.toml
xtask/assets/: big.json
xtask/src/: main.rs
